Fix rule filter overflow

--- a/frontend/src/components/pages/ConfigurationPage.scss
+++ b/frontend/src/components/pages/ConfigurationPage.scss
@@ -1,6 +1,7 @@
 @import "../../colors";
 
 .configuration-page {
+  height: 100vh;
   background-color: $color-primary-0;
 
   .header-title {
